--- a/style.css
+++ b/style.css
@@ -2,8 +2,13 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
 @import url('https://fonts.googleapis.com/css?family=Inconsolata');
 
+html {
+    background-color: #eeeeee;
+}
+
 body { 
     font-family: 'Arvo', serif;
+    color: #252525;
 }
 
 h1, h2, h3 {
