--- a/style.css
+++ b/style.css
@@ -16,10 +16,32 @@ h1, h2, h3 {
     font-weight: 700;
 }
 
-ul, ol {
-    line-height: 2;
+.title {
+    background-color: #252525;
+    background-size: cover;
+    color: #eeeeee;
+}
+
+.title h1 {
+    font-size: 3.5em;
 }
 
 .remark-code, .remark-inline-code { 
-    font-family: 'Inconsolata'; 
+    font-family: 'Inconsolata', monospace; 
+    font-size: 1.2em;
+}
+
+.remark-slide-number {
+    color: rgba(37, 37, 37, 0.3)
+}
+
+.subject {
+    position: absolute;
+    bottom: 12px;
+    left: 20px;
+    color: rgba(37, 37, 37, 0.3)
+}
+
+ul, ol {
+    line-height: 2;
 }
